# Resume-matcher

./: app.py  pyproject.toml  requirements.txt
static/: style.css
