[project]
name = "resume-score"
version = "0.1.0"
description = "This project is about ATS score of resume"
authors = [
    {name = "LOKESH"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
